# robot-node-ros2

./: .gitignore  setup.sh
coordinator_node/: package.xml  setup.cfg  setup.py
coordinator_node/config/: node_config.yaml
coordinator_node/coordinator_node/: coordinator_node.py  neural_network.py  reinforcement_network.py
coordinator_node/launch/: coordinator_launch.py
coordinator_node/resource/: notes.txt
cross_compile_docker/: build.sh  compose.yaml  setup.sh
dynamic_tf_publisher/: package.xml  setup.py
dynamic_tf_publisher/dynamic_tf_publisher/: dynamic_tf_publisher.py
dynamic_tf_publisher/launch/: dynamic_tf_publisher_launch.py
kris_robot/: CMakeLists.txt  package.xml
kris_robot/config/: kris_robot.rviz  nav2_params1.yaml  slam_toolbox_params1.yaml
kris_robot/launch/: kris_robot_launch.py  nav_launch.py  navigation_launch.py
kris_robot/src/: kris_robot.cpp  kris_robot.hpp  main.cpp
kris_robot/urdf/: kris_robot.urdf
map9250driver/launch/: mpu9250driver_launch.py
map9250driver/params/: ekf_config.yaml
map_merge/include/combine_grids/: grid_compositor.h  merging_pipeline.h
map_merge/include/map_merge/: map_merge.h
map_merge/src/: map_merge.cpp
map_merge/src/combine_grids/: grid_compositor.cpp  grid_warper.cpp  merging_pipeline.cpp
map_merger/: package.xml  setup.cfg  setup.py
map_merger/launch/: map_merger_launch.py
map_merger/map_merger/: map_merger.py
merge_map/: setup.py
merge_map/launch/: merge_map_launch.py
merge_map/merge_map/: merge_map.py
mpu9250driver/: CMakeLists.txt
mpu9250driver/launch/: mpu9250driver_launch.py
mpu9250driver/params/: ekf_config.yaml  mpu9250.yaml
mpu9250driver/src/: mpu9250driver.cpp
multirobot_map_merge/: CMakeLists.txt  package.xml
multirobot_map_merge/include/combine_grids/: grid_warper.h  merging_pipeline.h
multirobot_map_merge/include/map_merge/: map_merge.h
multirobot_map_merge/src/: map_merge.cpp
multirobot_map_merge/src/combine_grids/: estimation_internal.h  merging_pipeline.cpp
navigation/: CMakeLists.txt  package.xml
navigation/src/: main.cpp  navigation.cpp  navigation.hpp
robot_control/: CMakeLists.txt  package.xml
robot_control/src/: main.cpp  occupancy_grid_processor.cpp  occupancy_grid_processor.hpp  robot_control.cpp  robot_control.hpp
robot_network/: package.xml  setup.cfg  setup.py
robot_network/launch/: network_launch.py  new_network_launch.py
robot_network/resource/: notes.txt  reinforcement_network.drawio  robot_swarm_optimizer.pth  robot_swarm_optimizer_network.drawio  swarm_map_processor.drawio
robot_network/robot_network/: CMakeLists.txt  compress_dataset.py  compress_map.py  compress_maps.py  map_merger.cpp  map_merger.py  neural_network.py  parse_maps.py  plot_map.py  reinforcement_network.py  robot_network.py  robot_network_v2.py  robot_watcher.py  robot_watcher_v2.py  save_dataset.py
robot_node/: package.xml  setup.py
robot_node/config/: node_config.yaml
robot_node/launch/: interface_launch.py  swarm_launch.py
robot_node/resource/: notes.txt
robot_node/robot_node/: exploration_actor.py  robot_node.py
robot_node/rviz/: map_view.rviz
robot_sim/: package.xml  robot_parameters.yaml  setup.py  world.sdf
robot_sim/config/: nav2_params.yaml  nav2_params1.yaml  nav2_params2.yaml  nav2_params3.yaml  nav2_params4.yaml  slam_toolbox_params.yaml  slam_toolbox_params1.yaml  slam_toolbox_params2.yaml  slam_toolbox_params3.yaml  topic_monitor_cfg.yaml
robot_sim/gazebo/: bridge_config.yaml  building.sdf  gibson.sdf  test.sdf  world.sdf
robot_sim/gazebo/kris_robot/: model.sdf
robot_sim/gazebo/kris_robot1/: model.sdf
robot_sim/gazebo/kris_robot2/: model.config  model.sdf
robot_sim/gazebo/kris_robot3/: model.sdf
robot_sim/launch/: gazebo_launch.py  mapping_launch.py  merge_launch.py  nav_launch.py  navigation_launch.py  random_gazebo_launch.py  random_sim_launch.py  robot_launch.py  sim_launch.py
robot_sim/resource/: map1.pgm  map1.yaml  sim_diag.drawio
robot_sim/robot_sim/: generate_environment.py  robot_sim.py  state_publisher.py
robot_sim/rviz/: gazebo_rviz.rviz  robot_interface.rviz  robot_sim.rviz  sim_rviz.rviz
robot_sim/urdf/: robot.urdf
rrt_node/: package.xml  setup.py
rrt_node/launch/: rrt_launch.py
rrt_node/rrt_node/: rrt_node.py
sllidar_ros2/launch/: sllidar_a2m8_launch.py  view_sllidar_a2m8_launch.py
sllidar_ros2/src/: sllidar_node.cpp
topic_rate_monitor/: setup.py
topic_rate_monitor/topic_rate_monitor/: topic_rate_monitor.py
