<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>multirobot_map_merge</name>
  <version>2.1.4</version>

  <description>Merging multiple maps without knowledge of initial
  positions of robots.</description>

  <maintainer email="laeqten@gmail.com">Jiri Horner</maintainer>
  <license>BSD</license>
  <url>http://wiki.ros.org/multirobot_map_merge</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>map_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <!-- used to get OpenCV -->
  <depend>image_geometry</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
